Add completed CLI command

--- a/lesson07-tasks-list/Makefile
+++ b/lesson07-tasks-list/Makefile
@@ -3,3 +3,9 @@ run_db:
 
 down_db:
 	docker-compose down --volumes
+
+db_migrations_up:
+	migrate -path migrations -database 'postgres://postgres:test@localhost:5432/task_db?sslmode=disable' up
+
+db_migrations_down:
+	migrate -path migrations -database 'postgres://postgres:test@localhost:5432/task_db?sslmode=disable' down --all
